assert-struct/tests/snapshots/maps__value_mismatch.snap
---
source: assert-struct/tests/maps.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/map_errors/value_mismatch.rs:19:32
   |
19 |         string_map: #{ "key1": "expected_value", .. },
   |                                ^^^^^^^^^^^^^^^^ got "actual_value"
